--- a/nginx.conf
+++ b/nginx.conf
@@ -1,17 +1,26 @@
-server {
-    listen 80;
-    server_name localhost;
-    root /var/www/html;
-    index index.php index.html index.htm;
+events {}
 
-    location / {
-        try_files $uri $uri/ =404;
-    }
+http {
+    server {
+        listen 80;
+        server_name localhost;
 
-    location ~ \.php$ {
-        include fastcgi_params;
-        fastcgi_pass php:9000;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        root /home/evdm0167/website/public;
+        index index.php index.html index.htm;
+
+        location / {
+            try_files $uri $uri/ /index.php?$query_string;
+        }
+
+        location ~ \.php$ {
+            include fastcgi_params;
+            fastcgi_pass php:9000;
+            fastcgi_index index.php;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        }
+
+        location ~ /\. {
+            deny all;
+        }
     }
 }
