--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,14 @@
 events {}
 
 http {
+    include       /etc/nginx/mime.types;  # Add this line
+    default_type  application/octet-stream;
+
     server {
         listen 80;
         server_name localhost;
 
-        root /home/evdm0167/website/public;
+        root /var/www/html;
         index index.php index.html index.htm;
 
         location / {
